<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:gravity="center" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3"
        android:gravity="center" >
        
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/app_name"
            style="@style/lblHub"/>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="7"
        android:weightSum="10"
        android:gravity="center" >

        <Button
            android:id="@+id/btn_start"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:text="@string/btn_start" />
        
        <Button
            android:id="@+id/btn_quit"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:text="@string/btn_close" />
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">
            
            <CheckBox 
                android:id="@+id/chk_sound"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/chk_sound"
                android:checked="true"/>
            
            <CheckBox 
                android:id="@+id/chk_vibrate"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/chk_vibrate"
                android:checked="true"/>
            
        </LinearLayout>
    </LinearLayout>

</LinearLayout>