<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10" >

    <LinearLayout
        android:id="@+id/linear_hud"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="9" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:orientation="horizontal" >

            <TextView
                style="@style/lblHub"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="5"
                android:text="@string/lbl_hit"
                android:textColor="@android:color/holo_blue_light" />

            <TextView
                android:id="@+id/lbl_hit"
                style="@style/lblHub"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="5"
                android:textColor="@android:color/holo_blue_light" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:orientation="horizontal" >

            <TextView
                style="@style/lblHub"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="5"
                android:text="@string/lbl_miss"
                android:textColor="@android:color/holo_red_light" />

            <TextView
                android:id="@+id/lbl_miss"
                style="@style/lblHub"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="5"
                android:textColor="@android:color/holo_red_light" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:orientation="horizontal" >

            <TextView
                style="@style/lblHub"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="5"
                android:text="@string/lbl_hud"
                android:textColor="@android:color/holo_green_light" />

            <TextView
                android:id="@+id/lbl_score"
                style="@style/lblHub"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="5"
                android:textColor="@android:color/holo_green_light" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:weightSum="9" >

        <ImageView
            android:id="@+id/hole_top_1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:background="@drawable/border" />

        <ImageView
            android:id="@+id/hole_top_2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:background="@drawable/border" />

        <ImageView
            android:id="@+id/hole_top_3"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:background="@drawable/border" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_mid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:weightSum="9" >

        <ImageView
            android:id="@+id/hole_mid_1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:background="@drawable/border" />

        <ImageView
            android:id="@+id/hole_mid_2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:background="@drawable/border" />

        <ImageView
            android:id="@+id/hole_mid_3"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:background="@drawable/border" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:weightSum="9" >

        <ImageView
            android:id="@+id/hole_bottom_1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:background="@drawable/border" />

        <ImageView
            android:id="@+id/hole_bottom_2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:background="@drawable/border" />

        <ImageView
            android:id="@+id/hole_bottom_3"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:background="@drawable/border" />
    </LinearLayout>

</LinearLayout>